# DungeonWorldDice

./: .gitignore  README.md  frontend.py  keep_alive.py  main.py  pyproject.toml
auth/: grant.py
chars/: __init__.py  chars.py
cogs/: cog_chars.py  cog_dice.py  cog_example.py
dice/: dice.py
static/css/: main.css  main.scss
templates/: base.html  dashboard.html  index.html  login.html
