[tool.poetry]
name = "pbta-discord-bot"
version = "0.1.0"
description = "Dice rolling and Character Sheet for PbtA RPGs"
authors = ["humberto Fraga <xisberto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.3.4"
Flask = "^2.0.2"
replit = "^3.2.4"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
